syntax = "proto3";

package test;

service Greeter{
    rpc SayHello (HelloRequest) returns (HelloReplay);
}

message HelloRequest{
    string name = 1;
}

message HelloReplay{
    string message = 1;
}